--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,12 @@
-<!doctype html>
 {% load static %}
-<html class="fixed">
+<!doctype html>
+<html class="modern fixed has-top-menu has-left-sidebar-half">
 <head>
 
     <!-- Basic -->
     <meta charset="UTF-8">
 
-    <title>Home</title>
+    <title>Print</title>
     <meta name="keywords" content="HTML5 Admin Template"/>
     <meta name="description" content="Porto Admin - Responsive HTML5 Template">
     <meta name="author" content="okler.net">
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
     <!-- Web Fonts  -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800|Shadows+Into+Light"
-          rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,600,700,800,900" rel="stylesheet"
+          type="text/css">
 
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.css' %}"/>
@@ -25,43 +25,43 @@
     <link rel="stylesheet" href="{% static 'vendor/boxicons/css/boxicons.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/magnific-popup/magnific-popup.css' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/jquery-ui/jquery-ui.theme.css' %}"/>
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap-multiselect/css/bootstrap-multiselect.css' %}"/>
     <link rel="stylesheet" href="{% static 'vendor/morris/morris.css' %}"/>
-
+    <link rel="stylesheet" href="{% static 'vendor/datatables/media/css/dataTables.bootstrap5.css' %}"/>
+    {
     <!-- Theme CSS -->
     <link rel="stylesheet" href="{% static 'css/theme.css' %}"/>
+
+    <!-- Theme Layout -->
+    <link rel="stylesheet" href="{% static 'css/layouts/modern.css' %}"/>
 
     <!-- Skin CSS -->
     <link rel="stylesheet" href="{% static 'css/skins/default.css' %}"/>
 
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-
+    {% block additional_css %}{% endblock %}
     <!-- Head Libs -->
     <script src="{% static 'vendor/modernizr/modernizr.js' %}"></script>
-{% block additional_css %}{% endblock %}
+
+
 </head>
 <body>
 <section class="body">
-
     {% block navbar %}
         {% include '_includes/navbar.html' %}
     {% endblock %}
-
     <div class="inner-wrapper">
-        <!-- start: sidebar -->
         {% block sidebar %}
             {% include '_includes/sidebar.html' %}
         {% endblock %}
-        <!-- end: sidebar -->
-        <section role="main" class="content-body">
-            {% block sidebar_header %}
-                {% include '_includes/sidebar_header.html' %}
-            {% endblock %}
+
+        <section role="main" class="content-body content-body-modern">
+
+
+            <!-- start: page -->
             {% block content %}
             {% endblock content %}
+
         </section>
     </div>
 
@@ -80,7 +80,10 @@
 <script src="{% static 'vendor/jquery-placeholder/jquery.placeholder.js' %}"></script>
 
 <!-- Specific Page Vendor -->
-
+<script src="{% static 'vendor/raphael/raphael.js' %}"></script>
+<script src="{% static 'vendor/morris/morris.js' %}"></script>
+<script src="{% static 'vendor/datatables/media/js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'vendor/datatables/media/js/dataTables.bootstrap5.min.js' %}"></script>
 
 <!-- Theme Base, Components and Settings -->
 <script src="{% static 'js/theme.js' %}"></script>
@@ -92,7 +95,11 @@
 <script src="{% static 'js/theme.init.js' %}"></script>
 
 <!-- Examples -->
-<script src="{% static 'js/examples/examples.dashboard.js' %}"></script>
- {% block additional_js %}{% endblock %}
+<script src="{% static 'js/examples/examples.header.menu.js' %}"></script>
+<script src="{% static 'js/examples/examples.ecommerce.dashboard.js' %}"></script>
+<script src="{% static 'js/examples/examples.ecommerce.datatables.list.js' %}"></script>
+
+{% block additional_js %}{% endblock %}
+
 </body>
 </html>
