edit button done

--- a/templates/clients/client_list.html
+++ b/templates/clients/client_list.html
@@ -5,17 +5,25 @@
 
 
 {% block content %}
+    <header class="page-header page-header-left-inline-breadcrumb">
+        <h2 class="font-weight-bold text-6">Дашборд ></h2>
+        <div class="right-wrapper">
+            <ol class="breadcrumbs">
+                <li><span>клиенты</span></li>
+            </ol>
+        </div>
+    </header>
+
     <div class="row">
-        <div class="col-lg-12">
-            <section class="card">
-                <header class="card-header">
+        <div class="col">
+
+            <div class="card card-modern card-modern-table-over-header">
+                <div class="card-header">
                     <div class="card-actions">
                         <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
-
                     </div>
-
                     <a type="button" href="{% url 'clients:add' %}" class="btn btn-primary">Добавить</a>
-                </header>
+                </div>
                 <div class="card-body">
                     <table class="table table-responsive-md table-bordered mb-0">
                         <thead>
@@ -31,7 +39,7 @@
                         </thead>
                         <tbody>
                         {% for client in client_list %}
-                        <tr>
+                            <tr>
 
 
                                 <td>{{ forloop.counter }}</td>
@@ -41,18 +49,20 @@
                                 <td>{{ client.userId }}</td>
                                 <td>{{ client.phone }}</td>
                                 <td class="actions text-center">
-                                    <a href=""><i class="fas fa-pencil-alt"></i></a>
-                                    <a href="" class="delete-row"><i class="far fa-trash-alt"></i></a>
+                                    <a href="{% url 'clients:update' client.pk %}"><i class="fas fa-pencil-alt"></i></a>
+                                    <a href="{% url 'clients:delete' %}" class="delete-row"><i class="far fa-trash-alt"></i></a>
                                 </td>
 
-                        </tr>
- {% endfor %}
+                            </tr>
+                        {% endfor %}
                         </tbody>
                     </table>
                 </div>
-            </section>
+
+            </div>
         </div>
     </div>
+
 {% endblock %}
 <!-- Specific Page Vendor -->
 
