--- a/templates/clients/client_delete.html
+++ b/templates/clients/client_delete.html
@@ -5,6 +5,15 @@
 
 
 {% block content %}
+    <header class="page-header page-header-left-inline-breadcrumb">
+        <h2 class="font-weight-bold text-6">Dashboard ></h2>
+        <div class="right-wrapper">
+            <ol class="breadcrumbs">
+                <li><span>Mijozlar</span></li>
+                <li><span>O'chriish</span></li>
+            </ol>
+        </div>
+    </header>
     <!-- start: page -->
     <div class="row">
         <div class="col">
