--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'orders:order_list' %}">
                             <i class="bx bx-detail" aria-hidden="true"></i>
                             <span>Заказы</span>
                         </a>
