--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -29,30 +29,45 @@
                         <thead>
                         <tr>
                             <th>#</th>
-                            <th>Usernam</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
-                            <th>ChatId</th>
-                            <th>Phone number</th>
-                            <th>Actions</th>
+                            <th>Buyurtma raqami</th>
+                            <th>Hajmi</th>
+                            <th>Rangi</th>
+                            <th>Pereplyot turi</th>
+                            <th>Sahifalar soni</th>
+                            <th>Buyurtma statusi</th>
+                            <th>Mijoz telefon raqami</th>
+                            <th>To'lov statusi</th>
+                            <th>Yetqazib berish turi</th>
+                            <th>Manzil</th>
+                            <th>Narx</th>
+                            <th>Yaratildi</th>
+                            <th>Vazifa</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for client in client_list %}
+                        {% for order in order_list %}
                             <tr>
 
 
                                 <td>{{ forloop.counter }}</td>
-                                <td>{{ client.username }}</td>
-                                <td>{{ client.first_name }}</td>
-                                <td>{{ client.last_name }}</td>
-                                <td>{{ client.userId }}</td>
-                                <td>{{ client.phone }}</td>
-                                <td class="actions text-center">
-                                    <a href="#"><i class="fas fa-pencil-alt"></i></a>
-                                    <a href="#" class="delete-row"><i
-                                            class="far fa-trash-alt"></i></a>
-                                </td>
+                                <td><a href="#">{{ order.order_number }}</a></td>
+                                <td>{{ order.get_printSize_display }}</td>
+                                <td>{{ order.get_printColor_display }}</td>
+                                <td>{{ order.printBindingType.name }}</td>
+                                <td>{{ order.page_number }}</td>
+                                <td>{{ order.get_order_status_display }}</td>
+                                <td>{{ order.created_by.phone }}</td>
+                                <td>{{ order.get_cash_type_display }}</td>
+                                <td>{{ order.get_delivery_type_display }}</td>
+                                <td>{{ order.location }}</td>
+                                <td>{{ order.price }}</td>
+                                <td>{{ order.created_at|date:"d-M-Y H:i" }}</td>
+                                <td><button class="btn btn-primary" type="submit">Saqlash</button></td>
+{#                                <td class="actions text-center">#}
+{#                                    <a href="#"><i class="fas fa-pencil-alt"></i></a>#}
+{#                                    <a href="#" class="delete-row"><i#}
+{#                                            class="far fa-trash-alt"></i></a>#}
+{#                                </td>#}
 
                             </tr>
                         {% endfor %}
