add cash part in sidebar and update in order detail html

--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -25,19 +25,25 @@
                     <li>
                         <a class="nav-link" href="{% url 'orders:order_list' %}">
                             <i class="bx bx-detail" aria-hidden="true"></i>
-                            <span>Заказы</span>
+                            <span>Buyurtmalar</span>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="{% url 'clients:client_list' %}">
                             <i class="bx bx-user" aria-hidden="true"></i>
-                            <span>Клиенты</span>
+                            <span>Mijozlar</span>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="#">
                             <i class="bx bxl-product-hunt" aria-hidden="true"></i>
-                            <span>Продукты</span>
+                            <span>Mahsulotlar</span>
+                        </a>
+                    </li>
+                            <li>
+                        <a class="nav-link" href="#">
+                            <i class="bx bx-money" aria-hidden="true"></i>
+                            <span>Kassa</span>
                         </a>
                     </li>
 
