working in order detail

--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -4,8 +4,7 @@
     <div class="logo-container">
         <a href="../" class="logo">
             <img src="{% static 'img/device.png' %}" class="logo-image" width="90" height="24"
-                 alt="Porto Admin"/><img src="img/logo-default.png" class="logo-image-mobile" width="100"
-                                         height="41" alt="Porto Admin"/>
+                 alt="Porto Admin"/>
         </a>
         <button class="btn header-btn-collapse-nav d-lg-none" data-bs-toggle="collapse"
                 data-bs-target=".header-nav">
