--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -82,6 +82,18 @@
                                 </div>
                             </div>
                         </div>
+                    <div class="form-row">
+                            <div class="form-group col mb-3">
+                                <label>ChatId</label>
+                                <div class="date-time-field">
+                                    <div class="date">
+                                        <input type="text" class="form-control form-control-modern" value="{{ order.tg_pk }}"
+                                                readonly>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -91,40 +103,36 @@
 
                 <div class="card card-modern">
                     <div class="card-header">
-                        <h2 class="card-title">Addresses</h2>
+                        <h2 class="card-title">Qo'shimcha ma'lumot</h2>
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-xl-auto me-xl-5 pe-xl-5 mb-4 mb-xl-0">
-                                <h3 class="text-color-dark font-weight-bold text-4 line-height-1 mt-0 mb-3">BILLING</h3>
-                                <ul class="list list-unstyled list-item-bottom-space-0">
-                                    <li>Street Name Example</li>
-                                    <li>1234</li>
-                                    <li>Detroit</li>
-                                    <li>Michigan</li>
-                                    <li>93218</li>
-                                    <li>USA</li>
-                                </ul>
-                                <strong class="d-block text-color-dark">Email address:</strong>
-                                <a href="mailto:johndoe@domain.com">johndoe@domain.com</a>
-                                <strong class="d-block text-color-dark mt-3">Phone:</strong>
-                                <a href="tel:+5551234" class="text-color-dark">555-1234</a>
+                                <h3 class="text-color-dark font-weight-bold text-4 line-height-1 mt-0 mb-3">Mahsulot haqida</h3>
+                                <strong class="d-block text-color-dark">Hajmi:</strong>
+                                <p>{{ object.get_printSize_display }}</p>
+                                <strong class="d-block text-color-dark">Rangi:</strong>
+                                <p>{{ object.get_printColor_display }}</p>
+                                <strong class="d-block text-color-dark">Pereplyot turi:</strong>
+                                <p>{{ object.printBindingType.name }}</p>
+                                <strong class="d-block text-color-dark">Yetqazib berish turi:</strong>
+                                <p>{{ object.get_delivery_type_display }}</p>
+
                             </div>
                             <div class="col-xl-auto ps-xl-5">
                                 <h3 class="font-weight-bold text-color-dark text-4 line-height-1 mt-0 mb-3">
-                                    SHIPPING</h3>
-                                <ul class="list list-unstyled list-item-bottom-space-0">
-                                    <li>Street Name Example</li>
-                                    <li>1234</li>
-                                    <li>Detroit</li>
-                                    <li>Michigan</li>
-                                    <li>93218</li>
-                                    <li>USA</li>
-                                </ul>
-                                <strong class="d-block text-color-dark">Email address:</strong>
-                                <a href="mailto:johndoe@domain.com">johndoe@domain.com</a>
-                                <strong class="d-block text-color-dark mt-3">Phone:</strong>
-                                <a href="tel:+5551234" class="text-color-dark">555-1234</a>
+                                    Mijoz ma'lumotlari</h3>
+                                 <strong class="d-block text-color-dark">Telefon:</strong>
+                                <p>{{ client.phone }}</p>
+                                 <strong class="d-block text-color-dark">Username:</strong>
+                                <p>@{{ client.username }}</p>
+                                 <strong class="d-block text-color-dark">Ism:</strong>
+                                <p>{{ client.first_name }}</p>
+                                 <strong class="d-block text-color-dark">Familiya:</strong>
+                                <p>{{ client.last_name }}</p>
+
+
+
                             </div>
                         </div>
                     </div>
@@ -137,7 +145,7 @@
 
                 <div class="card card-modern">
                     <div class="card-header">
-                        <h2 class="card-title">Products</h2>
+                        <h2 class="card-title">Mahsulot</h2>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -145,66 +153,49 @@
                                    style="min-width: 380px;">
                                 <thead>
                                 <tr>
-                                    <th width="8%" class="ps-4">ID</th>
-                                    <th width="65%">Name</th>
-                                    <th width="5%" class="text-end">Cost</th>
-                                    <th width="7%" class="text-end">Qty</th>
-                                    <th width="5%" class="text-end">Total</th>
+                                    <th width="15%" class="ps-4">ID</th>
+                                    <th width="40%">Nomi</th>
+                                    <th width="10%" class="text-end">Narxi</th>
+                                    <th width="10%" class="text-end">Miqdor</th>
+                                    <th width="12%" class="text-end">Umumiy</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td class="ps-4"><a href="ecommerce-products-form.html"><strong>191</strong></a>
+                                    <td class="ps-4"><p><strong>{{ order.order_number }}</strong></p>
                                     </td>
-                                    <td><a href="ecommerce-products-form.html"><strong>Product Name Example</strong></a>
+                                    <td><p ><strong>{{ order.get_printSize_display }} , {{ order.get_printColor_display }} , {{ order.printBindingType }}</strong></p>
                                     </td>
-                                    <td class="text-end">$99</td>
+                                    <td class="text-end">{{ order.price|floatformat:"2g" }} so'm</td>
                                     <td class="text-end">1</td>
-                                    <td class="text-end">$99</td>
+                                    <td class="text-end">{{ order.price|floatformat:"2g" }} so'm</td>
                                 </tr>
-                                <tr>
-                                    <td class="ps-4"><a href="ecommerce-products-form.html"><strong>192</strong></a>
-                                    </td>
-                                    <td><a href="ecommerce-products-form.html"><strong>Product Name Example
-                                        2</strong></a></td>
-                                    <td class="text-end">$50</td>
-                                    <td class="text-end">1</td>
-                                    <td class="text-end">$50</td>
-                                </tr>
-                                <tr>
-                                    <td class="ps-4"><a href="ecommerce-products-form.html"><strong>193</strong></a>
-                                    </td>
-                                    <td><a href="ecommerce-products-form.html"><strong>Product Name Example
-                                        3</strong></a></td>
-                                    <td class="text-end">$132</td>
-                                    <td class="text-end">1</td>
-                                    <td class="text-end">$132</td>
-                                </tr>
+
                                 </tbody>
                             </table>
                         </div>
 
                         <div class="row justify-content-end flex-column flex-lg-row my-3">
                             <div class="col-auto me-5">
-                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Items Subtotal</h3>
+                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Mahsulot narxi</h3>
                                 <span class="d-flex align-items-center">
-													3 Items
+													1 mahsumot
 													<i class="fas fa-chevron-right text-color-primary px-3"></i>
-													<b class="text-color-dark text-xxs">$298.00</b>
+													<b class="text-color-dark text-xxs">{{ order.price|floatformat:"2g" }} so'm</b>
 												</span>
                             </div>
                             <div class="col-auto me-5">
-                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Shipping</h3>
+                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Yetqazib berish</h3>
                                 <span class="d-flex align-items-center">
-													Flat Rate
+													Yetqazib berish
 													<i class="fas fa-chevron-right text-color-primary px-3"></i>
-													<b class="text-color-dark text-xxs">$20.00</b>
+													<b class="text-color-dark text-xxs">0 so'm</b>
 												</span>
                             </div>
                             <div class="col-auto">
-                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Order Total</h3>
+                                <h3 class="font-weight-bold text-color-dark text-4 mb-3">Umumiy narx</h3>
                                 <span class="d-flex align-items-center justify-content-lg-end">
-													<strong class="text-color-dark text-5">$318.00</strong>
+													<strong class="text-color-dark text-5">{{ order.price|floatformat:"2g" }} so'm</strong>
 												</span>
                             </div>
                         </div>
@@ -218,7 +209,7 @@
 
                 <div class="card card-modern">
                     <div class="card-header">
-                        <h2 class="card-title">Order Notes</h2>
+                        <h2 class="card-title">Manzil</h2>
                     </div>
                     <div class="card-body">
 
@@ -229,13 +220,7 @@
                                           rows="6"></textarea>
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="form-group col">
-                                <a href="#"
-                                   class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">Add
-                                    Note</a>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
 
@@ -243,24 +228,22 @@
         </div>
         <div class="row action-buttons">
             <div class="col-12 col-md-auto">
-                <button type="submit"
-                        class="submit-button btn btn-primary btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1"
-                        data-loading-text="Loading...">
-                    <i class="bx bx-save text-4 me-2"></i> Save Order
-                </button>
-            </div>
-            <div class="col-12 col-md-auto px-md-0 mt-3 mt-md-0">
-                <a href="ecommerce-orders-list.html"
-                   class="cancel-button btn btn-light btn-px-4 py-3 border font-weight-semibold text-color-dark text-3">Cancel</a>
-            </div>
-            <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
                 <a href="#"
                    class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">
-                    <i class="bx bx-trash text-4 me-2"></i> Delete Order
+                    <i class="bx bx-trash text-4 me-2"></i> Bekor qilish
                 </a>
+            </div>
+
+            <div class="col-12 col-md-auto ms-md-auto mt-3 mt-md-0 ms-auto">
+                 <button type="submit"
+                        class="submit-button btn btn-primary btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1"
+                        data-loading-text="Loading...">
+                    <i class="bx bx-save text-4 me-2"></i> Qabul qilish
+                </button>
             </div>
         </div>
     </form>
+
     <!-- end: page -->
 
 {% endblock %}
