add phone in html

--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -274,6 +274,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="form-row">
+                            <div class="form-group col mb-3">
+                                <label>Telefon</label>
+                                <div class="date-time-field">
+                                    <div class="date">
+                                        <input type="text" class="form-control form-control-modern"
+                                               value="{{ client.phone }}"
+                                               readonly>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
