--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -18,6 +18,7 @@
 
 {% block content %}
 
+
     <header class="page-header page-header-left-inline-breadcrumb">
         <h2 class="font-weight-bold text-6">Buyurtma #{{ object.order_number }} Ma'lumotlari</h2>
         <div class="right-wrapper">
@@ -35,8 +36,10 @@
         </div>
     </header>
 
+
     <!-- start: page -->
-    <form class="order-details action-buttons-fixed" method="post">
+    <form class="order-details action-buttons-fixed" method="post" action=".">
+        {% csrf_token %}
         <div class="row">
             <div class="col-xl-4 mb-4 mb-xl-0">
 
@@ -294,7 +297,7 @@
 
         <div class="row action-buttons">
             <div class="col-12 col-md-auto">
-                <a href="#"
+                <a href="#modalBasic"
                    class="delete-button btn btn-danger btn-px-4 py-3 d-flex align-items-center font-weight-semibold line-height-1">
                     <i class="bx bx-trash text-4 me-2"></i> Bekor qilish
                 </a>
@@ -309,6 +312,28 @@
             </div>
         </div>
     </form>
+    <div id="modalBasic" class="modal-block mfp-hide">
+        <section class="card">
+            <header class="card-header">
+                <h2 class="card-title">Are you sure?</h2>
+            </header>
+            <div class="card-body">
+                <div class="modal-wrapper">
+                    <div class="modal-text">
+                        <p class="mb-0">Are you sure that you want to delete this image?</p>
+                    </div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <div class="row">
+                    <div class="col-md-12 text-end">
+                        <button class="btn btn-primary modal-confirm">Confirm</button>
+                        <button class="btn btn-default modal-dismiss">Cancel</button>
+                    </div>
+                </div>
+            </footer>
+        </section>
+    </div>
 
     <!-- end: page -->
 
@@ -317,6 +342,11 @@
 <!-- Specific Page Vendor -->
 
 {% block additional_js %}
+    <!-- Specific Page Vendor -->
+		<script src="{% static 'vendor/select2/js/select2.js' %}"></script>
+		<script src="{% static 'vendor/pnotify/pnotify.custom.js' %}"></script>
+    <!-- Examples -->
+    <script src="{% static 'js/examples/examples.modals.js' %}"></script>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
 
@@ -336,9 +366,12 @@
                 L.latLng(latitude, longitude),
                 L.latLng(41.322610, 69.253904)
             ],
+            addWaypoints: false,
             routeWhileDragging: true
         }).addTo(map);
 
 
     </script>
+
+
 {% endblock %}
