order cancel done

--- a/templates/orders/order_detail.html
+++ b/templates/orders/order_detail.html
@@ -329,7 +329,7 @@
                         {% csrf_token %}
                         <div class="col-md-12 text-end">
                             <button class="btn btn-default modal-dismiss">Yoq</button>
-                            <button type="submit" class="btn btn-primary modal-confirm">Ha</button>
+                            <button type="submit" class="btn btn-primary">Ha</button>
                         </div>
                     </form>
                 </div>
